rgbds-0.6.1/test/asm/redef-equs.err
error: redef-equs.asm(23):
    'N' already defined as non-EQUS at redef-equs.asm(22)
error: Assembly aborted (1 error)!
